# Andromeda

./: .gitignore  CMakeLists.txt  README.md  formatter.xml
cmake/: build.cmake  echo.cmake  environment.cmake  exec.cmake  internal.cmake  main.cmake  print.cmake
cmake/toolchain/: x86_64-win32-toolchain.cmake
include/: andromeda.h
include/andromeda/: app.h  media.h  traits.h  util.h
include/andromeda/app/: application.h  frame_rate.h  render_system.h  transparent_full_window_application.h  window.h  window_application.h
include/andromeda/audio/: al_basic.h  audio_buffer.h  audio_source.h
include/andromeda/common/: array.h  bindable_object.h  intl_memb_detect.h  lib_call.h  log.h  object.h  object_val.h  signals.h  string_utils.h  terminal_style.h  timer.h
include/andromeda/graphics/: camera.h  coord_transform.h  double_framebuffer.h  framebuffer.h  geometry.h  gl_basic.h  image_font.h  internal_shaders.h  renderable.h  renderable_model.h  shader_program.h  sprite.h  texture_2d.h  vertex_attribute.h
include/andromeda/internal/: clib_call.h  dump.h  exec.h  object.h  signals.h
include/andromeda/io/: files.h
include/andromeda/log/: log.h
include/andromeda/math/: matrix.h  quaternion.h  transform.h  vector.h
include/andromeda/media/: audio_codec.h  (+6 more)
libcxxactx/: CMakeLists.txt
libcxxactx/src/: al_basic.cpp
libcxxcomm/: .cproject  .project  CMakeLists.txt
libcxxcomm/src/: ansi_text_style.cpp  csv_file.cpp  files.cpp  frame_rate.cpp  log.cpp  paths.cpp  sequential_lock.cpp  string_utils.cpp  timer.cpp
libcxxgctx/: CMakeLists.txt
libcxxgctx/src/: camera.cpp  coord_transform.cpp  render_system.cpp  window.cpp
libcxxjvmi/: CMakeLists.txt
libcxxjvmi/src/: jvm.cpp
libcxxllo/: .cproject  .project  CMakeLists.txt
libcxxllo/src/: signal_handle.cpp
libcxxmmproc/: CMakeLists.txt
libcxxmmproc/src/: audio_codec.cpp  codec.cpp  raster_image.cpp
libcxxnw/: CMakeLists.txt
libcxxnw/src/: tcp_channel.cpp  tcp_client.cpp  tcp_server.cpp  tcp_session.cpp
libcxxsci/: .cproject  .project  CMakeLists.txt
libcxxsci/src/: color_rgba.cpp
libcxxtricks/: CMakeLists.txt
lua/stdlib/: class.lua  stdlib.lua
src/andromeda/: andromeda.cpp
(+139 files in other folders)
